[package]
name = "protocol-node"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.6.1", features = ["derive"] }
colored = "3.1.1"
ctrlc = "3.5.2"
httparse = "1.10.1"
indicatif = "0.18.6"
native-tls = "0.2.18"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
shell-words = "1.1.1"
x509-parser = "0.18.1"
